--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body{
     overflow: hidden;
 }
 
+.logo {
+    position: absolute;
+    display: flex;
+    right: 219px;
+    top: 85px;
+    font-size: 20px;
+    color: rgb(7, 240, 221);
+}
+
 .wrapper {
     position: relative;
     width: 500px;
@@ -23,11 +32,35 @@ body{
     align-items: center;
 }
 
+.bar-seconds,
 .number_hours {
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 50%;
+}
+
+.bar-seconds span{
+    position: absolute;
+    transform: rotate(calc(var(--index) * 6deg));
+    inset: -20px;
+    text-align: center;
+}
+
+.bar-seconds span p {
+    display: inline-block;
+    width: 2px;
+    height: 12px;
+    background: #0ef;
+    border-radius: 2px;
+    box-shadow: 0 0 10px #0ef;
+}
+
+.bar-seconds span:nth-child(5n) p {
+    background: #0ef;
+    width: 6px;
+    height: 18px;
+    transform: translateY(1px);
 }
 
 .number_hours span {
@@ -39,7 +72,7 @@ body{
 
 .number_hours span p {
     font-size: 52px;
-    color: rgb(6, 146, 148);
+    color: rgb(11, 231, 234);
     text-shadow: 0 0 10px rgb(6, 146, 148);
     transform: rotate(calc(var(--index) * -30deg));
 }
@@ -68,7 +101,6 @@ body{
 .hands-box .hours {
     width: 320px;
     height: 320px;
-    transform: rotate(40deg);
 }
 
 .hands-box .hours i{
@@ -80,7 +112,6 @@ body{
 .hands-box .minutes {
     width: 450px;
     height: 450px;
-    transform: rotate(230deg);
 }
 
 .hands-box .minutes::before {
@@ -104,7 +135,6 @@ body{
 .hands-box .seconds {
     width: 480px;
     height: 480px;
-    transform: rotate(160deg);
 }
 
 .hands-box .seconds::before {
@@ -124,4 +154,55 @@ body{
     height: calc(240px + 70px);
     background: white;
     box-shadow: none;
+}
+
+@media screen and (max-width: 450px) {
+    .wrapper {
+        position: fixed;
+        width: 345px;
+        height: 345px;
+    }
+
+    .logo {
+        position: absolute;
+        display: flex;
+        right: 141px;
+        top: 82px;
+        font-size: 20px;
+        color: rgb(7, 240, 221);
+    }
+
+    .hands-box .seconds {
+        width: 365px;
+        height: 365px;
+    }
+
+    .hands-box .minutes {
+        width: 320px;
+        height: 320px;
+    }
+
+    .hands-box .hours {
+        width: 250px;
+        height: 250px;
+    }
+
+    .hands-box .seconds i{
+        width: 4px;
+        height: calc(225px);
+        background: white;
+        box-shadow: none;
+    }
+
+    .hands-box .minutes i{
+        width: 7px;
+        height: 170px;
+        background: #0ef;
+    }
+
+    .hands-box .hours i{
+        width: 8px;
+        height: 135px;
+        background: #0ef;
+    }
 }
